# p0ly-flow

./: .gitignore  AGENTS.md  README.md  Snakefile  config.yaml  pyproject.toml
data/raw/bids/: README  dataset_description.json  participants.tsv
data/raw/bids/sub-001/: sub-001_scans.tsv
data/raw/bids/sub-001/eeg/: sub-001_task-rest_channels.tsv  sub-001_task-rest_eeg.eeg  sub-001_task-rest_eeg.json  sub-001_task-rest_eeg.vhdr  sub-001_task-rest_eeg.vmrk
data/raw/sub-001/: sub-001_task-rest.eeg  sub-001_task-rest.vhdr  sub-001_task-rest.vmrk
envs/: snakemake.yaml
metadata/: manifest.tsv
profiles/local/: config.yaml
scripts/: create_tsv.py  epoch.py  ingest_raw.py  parse_metadata.py  preprocess.py
