[project]
name = "p0ly-flow"
version = "0.1.0"
description = "Snakemake orchestration pipeline for p0ly EEG analysis"
readme = "README.md"
authors = [
    { name = "Frederik Baumgardt", email = "fbaumgardt@posteo.de" }
]
requires-python = ">=3.13"
dependencies = [
    "p0ly-utils",
    "snakemake>=9.0",
]

[tool.uv]
package = false

[tool.uv.sources]
p0ly-utils = { path = "../p0ly-eeg" }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
target-version = "py313"
src = ["scripts"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["F821"]
